--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             <td id="tb2"><img src="avaimg/mini.png" alt="mini"></td>
             <td id="tb2">Extra mini - Anchieta</td>
             <td id="tb2">30-40 min</td>
+            /* Teste */
         </tr>
     </table>
 
