--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         a:hover {
-            color: rgb(250, 56, 75);
+            color: rgb(30, 46, 75);
         }
 
         #tabela,
@@ -58,7 +58,7 @@
             margin: auto;
             padding: 10px;
             background-color: darkgray;
-            border: 2px solid white;
+            border: 2px solid blue;
             border-collapse: collapse;
         }
 
@@ -66,14 +66,14 @@
             width: 250px;
             height: 150px;
             text-align: center;
-            padding: 20px;
+            padding: 200px;
             border-color: aliceblue;
             border-radius: 10px;
         }
 
         #pedido1 {
             margin: auto;
-            background-color: rgb(250, 56, 75);
+            background-color: rgb(220, 16, 25);
 
         }
 
@@ -121,12 +121,12 @@
         <div id="conteúdo">
 
             <div id="pedido1" class="pedido">
-                <h2 style="color: white;">Restaurante</h2>
+                <h2 style="color: black;">Restaurante</h2>
                 <button>Pedir</button>
             </div>
 
             <div id="pedido2" class="pedido">
-                <h2 style="color: white;">Mercado</h2>
+                <h2 style="color: black;">Mercado</h2>
                 <button>Pedir</button>
             </div>
         </div>
@@ -151,7 +151,48 @@
             <td id="tb2">30-40 min</td>
         </tr>
     </table>
-
+    <table>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+        <td>CARA NÂO SEI</td>
+    </table>
 </body>
 
 </html>
